force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>Top level in a hierarchically structured HTML form for online submissions</description>
    <label>Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>