force-app/main/default/objects/Form__c/fields/Ack_template__c.field-meta.xml
<CustomField>
    <fullName>Ack_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The correspondence template to be used when acknowledging submission of a form instance.  If blank, then acknowledge using the ack email subject/body form phrases.</description>
    <inlineHelpText>The correspondence template to be used when acknowledging submission of a form instance.  If blank, then acknowledge using the ack email subject/body form phrases.</inlineHelpText>
    <label>Ack template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>