force-app/main/default/objects/Form__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this form record is active</description>
    <inlineHelpText>Checked if this form record is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>