force-app/main/default/objects/Form__c/fields/App_type__c.field-meta.xml
<CustomField>
    <fullName>App_type__c</fullName>
    <description>For grant application forms, the intended app type for proposals associated with this form</description>
    <inlineHelpText>For grant application forms, the intended app type for proposals associated with this form</inlineHelpText>
    <label>App type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>