force-app/main/default/objects/Form__c/fields/Closing_survey_form__c.field-meta.xml
<CustomField>
    <fullName>Closing_survey_form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The survey form (if any) that online apps instantiates and presents to the grantee upon submission of this form.  Currently only used for final yearly report forms.</description>
    <inlineHelpText>The survey form (if any) that online apps instantiates and presents to the grantee upon submission of this form.  Currently only used for final yearly report forms.</inlineHelpText>
    <label>Closing survey form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>