force-app/main/default/objects/Form__c/fields/Days_from_created_to_due__c.field-meta.xml
<CustomField>
    <fullName>Days_from_created_to_due__c</fullName>
    <description>Used to calculate the default date due of a form instance from its date created</description>
    <inlineHelpText>Used to calculate the default date due of a form instance from its date created</inlineHelpText>
    <label>Days from created to due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>