force-app/main/default/objects/Form__c/fields/Form_languages_unavailable__c.field-meta.xml
<CustomField>
    <fullName>Form_languages_unavailable__c</fullName>
    <description>Selected languages are not available for this form - display a warning message under the form title on online apps.</description>
    <inlineHelpText>Selected languages are not available for this form - display a warning message under the form title on online apps.</inlineHelpText>
    <label>Form languages unavailable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>