force-app/main/default/objects/Form__c/fields/Form_Phrase_ack_email_body__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_ack_email_body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The body for this form&apos;s ack email (if any)</description>
    <inlineHelpText>The body for this form&apos;s ack email (if any)</inlineHelpText>
    <label>Form Phrase ack email body</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase ack email body)</relationshipLabel>
    <relationshipName>Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>