force-app/main/default/objects/Form__c/fields/Form_Phrase_ack_email_body_one_step__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_ack_email_body_one_step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This acknowledgement email body is used in place of the standard in the &quot;one-step&quot; case, that is, when the applicant may proceed directly to a pending proposal application form after profile submission.</description>
    <inlineHelpText>This acknowledgement email body is used in place of the standard in the &quot;one-step&quot; case, that is, when the applicant may proceed directly to a pending proposal application form after profile submission.</inlineHelpText>
    <label>Form Phrase ack email body one-step</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase ack email body one-step)</relationshipLabel>
    <relationshipName>Forms7</relationshipName>
    <type>Lookup</type>
</CustomField>