force-app/main/default/objects/Form__c/fields/Form_Phrase_ack_email_subject__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_ack_email_subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subject for this form&apos;s ack email (if any)</description>
    <inlineHelpText>The subject for this form&apos;s ack email (if any)</inlineHelpText>
    <label>Form Phrase ack email subject</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase ack email subject)</relationshipLabel>
    <relationshipName>Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>