force-app/main/default/objects/Form__c/fields/Form_Phrase_ack_for_prior_form__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_ack_for_prior_form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form phrase containing the text acknowledging submission of the prior form (typically for survey forms)</description>
    <inlineHelpText>Form phrase containing the text acknowledging submission of the prior form (typically for survey forms)</inlineHelpText>
    <label>Form Phrase ack for prior form</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase ack for prior form)</relationshipLabel>
    <relationshipName>FormsaKxX</relationshipName>
    <type>Lookup</type>
</CustomField>