force-app/main/default/objects/Form__c/fields/Form_Phrase_confirm__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_confirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The text to display on the confirm page for this form (Confirm page appears prior to entering the form and only for &quot;non-invited&quot; proposals, ie auto-assigned invites to allocations). If blank, confirm page is skipped.</description>
    <inlineHelpText>The text to display on the confirm page for this form (Confirm page appears prior to entering the form and only for &quot;non-invited&quot; proposals, ie auto-assigned invites to allocations). If blank, confirm page is skipped.</inlineHelpText>
    <label>Form Phrase confirm</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase confirm)</relationshipLabel>
    <relationshipName>Forms9</relationshipName>
    <type>Lookup</type>
</CustomField>