force-app/main/default/objects/Form__c/fields/Form_Phrase_fail_text__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_fail_text__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The text that appears when an applicant &quot;fails&quot; when trying to submit this form, for example, when they&apos;ve given wrong answers to prequal questions</description>
    <inlineHelpText>The text that appears when an applicant &quot;fails&quot; when trying to submit this form, for example, when they&apos;ve given wrong answers to prequal questions</inlineHelpText>
    <label>Form Phrase fail text</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase fail text)</relationshipLabel>
    <relationshipName>Forms8</relationshipName>
    <type>Lookup</type>
</CustomField>