force-app/main/default/objects/Form__c/fields/Form_Phrase_Footer__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Footer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Footer text below Submit button of form</description>
    <inlineHelpText>Footer text below Submit button of form</inlineHelpText>
    <label>Form Phrase Footer</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase Footer)</relationshipLabel>
    <relationshipName>FormsujgP</relationshipName>
    <type>Lookup</type>
</CustomField>