force-app/main/default/objects/Form__c/fields/Form_Phrase_form_invalid__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_form_invalid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;warning&quot; text to use if the form instance is invalid</description>
    <inlineHelpText>The &quot;warning&quot; text to use if the form instance is invalid</inlineHelpText>
    <label>Form Phrase form invalid</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase form closed)</relationshipLabel>
    <relationshipName>Formswy5j</relationshipName>
    <type>Lookup</type>
</CustomField>