force-app/main/default/objects/Form__c/fields/Form_Phrase_help_text__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_help_text__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The text in the popup window opened by the help link when applicant is looking at this form</description>
    <inlineHelpText>The text in the popup window opened by the help link when applicant is looking at this form</inlineHelpText>
    <label>Form Phrase help text</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase help)</relationshipLabel>
    <relationshipName>Forms5</relationshipName>
    <type>Lookup</type>
</CustomField>