force-app/main/default/objects/Form__c/fields/Form_Phrase_Intro__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Intro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (translatable) intro text for this form</description>
    <inlineHelpText>The (translatable) intro text for this form</inlineHelpText>
    <label>Form Phrase Intro</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>