force-app/main/default/objects/Form__c/fields/Form_Phrase_Intro_closed_for_submit__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Intro_closed_for_submit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Text that explains that profile submission is closed - this phrase will NOT be displayed if profile submission is allowed either generally or for the current profile</description>
    <inlineHelpText>Text that explains that profile submission is closed - this phrase will NOT be displayed if profile submission is allowed either generally or for the current profile</inlineHelpText>
    <label>Form Phrase Intro closed for submit</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase Intro closed for submit)</relationshipLabel>
    <relationshipName>Forms6</relationshipName>
    <type>Lookup</type>
</CustomField>