force-app/main/default/objects/Form__c/fields/Form_Phrase_language_unavailable__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_language_unavailable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If form is unavailable in the online apps group&apos;s selected language, then display this phrase, else a generic phrase.</description>
    <inlineHelpText>If form is unavailable in the online apps group&apos;s selected language, then display this phrase, else a generic phrase.</inlineHelpText>
    <label>Form Phrase language unavailable</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase language unavailable)</relationshipLabel>
    <relationshipName>FormsbZLX</relationshipName>
    <type>Lookup</type>
</CustomField>