force-app/main/default/objects/Form__c/fields/Form_Phrase_sub_title__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_sub_title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If non-blank, then this phrase appears under the form title, above the intro.</description>
    <inlineHelpText>If non-blank, then this phrase appears under the form title, above the intro.</inlineHelpText>
    <label>Form Phrase sub title</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase sub title)</relationshipLabel>
    <relationshipName>FormsbZLI</relationshipName>
    <type>Lookup</type>
</CustomField>