force-app/main/default/objects/Form__c/fields/Form_Phrase_submitted__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_submitted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The text to display when this form is submitted</description>
    <inlineHelpText>The text to display when this form is submitted</inlineHelpText>
    <label>Form Phrase submitted</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase submitted)</relationshipLabel>
    <relationshipName>Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>