force-app/main/default/objects/Form__c/fields/Form_Phrase_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (translatable) title phrase for this form</description>
    <inlineHelpText>The (translatable) title phrase for this form</inlineHelpText>
    <label>Form Phrase Title</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase Title)</relationshipLabel>
    <relationshipName>Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>