force-app/main/default/objects/Form__c/fields/Form_Phrase_under_construction__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_under_construction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Phrase displayed at online apps if this form is under construction. If blank, a generic phrase is used.</description>
    <inlineHelpText>Phrase displayed at online apps if this form is under construction. If blank, a generic phrase is used.</inlineHelpText>
    <label>Form Phrase under construction</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Forms (Form Phrase under construction)</relationshipLabel>
    <relationshipName>FormsbZL8</relationshipName>
    <type>Lookup</type>
</CustomField>