force-app/main/default/objects/Form__c/fields/FormAssembly_base_URL__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_base_URL__c</fullName>
    <description>If non-blank, should be the base URL for a FormAssembly form, including the necessary form assembly field ids, for example, https://www.tfaforms.com/4897536?tfa_1=&lt;OrgName&gt;&amp;tfa_3=&lt;FormInstanceId&gt;</description>
    <inlineHelpText>If non-blank, should be the base URL for a FormAssembly form, including the necessary form assembly field ids, for example, https://www.tfaforms.com/4897536?tfa_1=&lt;OrgName&gt;&amp;tfa_3=&lt;FormInstanceId&gt;</inlineHelpText>
    <label>FormAssembly base URL</label>
    <type>Url</type>
</CustomField>