force-app/main/default/objects/Form__c/fields/Inactivity_threshold_in_days__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_threshold_in_days__c</fullName>
    <description># of &quot;inactive&quot; days, if any, after which action is taken on an unsubmitted form instance linked to this form. &quot;Inactive&quot; = no saved changes. 
(Ex. props w/ unsubmitted and inactive app form instances get auto-withdrawn)</description>
    <inlineHelpText># of &quot;inactive&quot; days, if any, after which action is taken on an unsubmitted form instance linked to this form. &quot;Inactive&quot; = no saved changes. 
(Ex. props w/ unsubmitted and inactive app form instances get auto-withdrawn)</inlineHelpText>
    <label>Inactivity threshold (in days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>