force-app/main/default/objects/Form__c/fields/Overdue_template__c.field-meta.xml
<CustomField>
    <fullName>Overdue_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The correspondence template for overdue letters/emails for unsubmitted form instances</description>
    <inlineHelpText>The correspondence template for overdue letters/emails for unsubmitted form instances</inlineHelpText>
    <label>Overdue template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Forms (Overdue template)</relationshipLabel>
    <relationshipName>Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>