force-app/main/default/objects/Form__c/fields/Prequal_form__c.field-meta.xml
<CustomField>
    <fullName>Prequal_form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this form is considered a pre-qualification form, that is, its questions have &quot;correct&quot; answers without which the applicant can&apos;t progress to profile</description>
    <inlineHelpText>Checked if this form is considered a pre-qualification form, that is, its questions have &quot;correct&quot; answers without which the applicant can&apos;t progress to profile</inlineHelpText>
    <label>Prequal form</label>
    <type>Checkbox</type>
</CustomField>