force-app/main/default/objects/Form__c/fields/Reminder_overdue_number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_overdue_number_of_days__c</fullName>
    <description>Comma-separated list of numbers indicates when to auto-send reminder and overdue emails for forms not yet submitted. For example, &quot;-10, -5, 0, 20, 7+&quot; sends reminders 10 and 5 days before the due date as well as on the due date. It sends an overdue notice 20 days after the due date and every 7 days thereafter.</description>
    <inlineHelpText>Comma-separated list of numbers indicates when to auto-send reminder and overdue emails for forms not yet submitted. For example, &quot;-10, -5, 0, 20, 7+&quot; sends reminders 10 and 5 days before the due date as well as on the due date. It sends an overdue notice 20 days after the due date and every 7 days thereafter.</inlineHelpText>
    <label>Reminder/overdue number of days</label>
    <type>TextArea</type>
</CustomField>