force-app/main/default/objects/Form__c/fields/Reminder_template__c.field-meta.xml
<CustomField>
    <fullName>Reminder_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The correspondence template for reminder letters/emails for unsubmitted form instances</description>
    <inlineHelpText>The correspondence template for reminder letters/emails for unsubmitted form instances</inlineHelpText>
    <label>Reminder template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Forms (Reminder template)</relationshipLabel>
    <relationshipName>Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>