force-app/main/default/objects/Form__c/fields/Resubmittable__c.field-meta.xml
<CustomField>
    <fullName>Resubmittable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if form instances may be edited (and resubmitted) after they&apos;ve been submitted</description>
    <inlineHelpText>Checked if form instances may be edited (and resubmitted) after they&apos;ve been submitted</inlineHelpText>
    <label>Resubmittable</label>
    <type>Checkbox</type>
</CustomField>