force-app/main/default/objects/Form__c/fields/Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Review_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The review form (if any) to be used in a review interface in conjunction with this form</description>
    <inlineHelpText>The review form (if any) to be used in a review interface in conjunction with this form</inlineHelpText>
    <label>Review Form</label>
    <referenceTo>Review_Form__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>