force-app/main/default/objects/Form__c/fields/Reviewable_form_types__c.field-meta.xml
<CustomField>
    <fullName>Reviewable_form_types__c</fullName>
    <description>If non-empty, then this form is presented on the community in a left-right split interface, where the left side contains linked form instances having the selected form types.</description>
    <inlineHelpText>If non-empty, then this form is presented on the community in a left-right split interface, where the left side contains linked form instances having the selected form types.</inlineHelpText>
    <label>Reviewable form types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_type</valueSetName>
    </valueSet>
</CustomField>