force-app/main/default/objects/Form__c/fields/Single_form_language__c.field-meta.xml
<CustomField>
    <fullName>Single_form_language__c</fullName>
    <description>If non-blank, then the selected language is the ONLY one available for this form.</description>
    <inlineHelpText>If non-blank, then the selected language is the ONLY one available for this form.</inlineHelpText>
    <label>Single form language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>