force-app/main/default/objects/Form__c/fields/Sort_number__c.field-meta.xml
<CustomField>
    <fullName>Sort_number__c</fullName>
    <description>Determines the sort order for this form within its app</description>
    <inlineHelpText>Determines the sort order for this form within its app</inlineHelpText>
    <label>Sort number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>