force-app/main/default/objects/Form__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this form</description>
    <inlineHelpText>The type of this form</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_type</valueSetName>
    </valueSet>
</CustomField>