force-app/main/default/objects/Form__c/fields/Under_construction__c.field-meta.xml
<CustomField>
    <fullName>Under_construction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this form is under construction and, except for form title, is hidden on online apps.</description>
    <inlineHelpText>If checked, then this form is under construction and, except for form title, is hidden on online apps.</inlineHelpText>
    <label>Under construction</label>
    <type>Checkbox</type>
</CustomField>