force-app/main/default/objects/Form__c/listViews/Eligibility_Forms.listView-meta.xml
<ListView>
    <fullName>Eligibility_Forms</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Prequal_form__c</columns>
    <columns>Sort_number__c</columns>
    <columns>Form_Phrase_Title__c</columns>
    <columns>Form_Phrase_sub_title__c</columns>
    <columns>Form_Phrase_Intro__c</columns>
    <columns>Form_languages_unavailable__c</columns>
    <columns>Under_construction__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Eligibility</value>
    </filters>
    <label>Eligibility Forms</label>
</ListView>