force-app/main/default/objects/Form__c/listViews/Floating_Forms.listView-meta.xml
<ListView>
    <fullName>Floating_Forms</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Under_construction__c</columns>
    <columns>Sort_number__c</columns>
    <columns>App_type__c</columns>
    <columns>Form_Phrase_Title__c</columns>
    <columns>Form_Phrase_sub_title__c</columns>
    <columns>Form_Phrase_Intro__c</columns>
    <columns>Form_languages_unavailable__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sort_number__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>REV_</value>
    </filters>
    <label>&quot;Floating&quot; Forms</label>
</ListView>