force-app/main/default/objects/Form__c/listViews/FormAssembly_forms.listView-meta.xml
<ListView>
    <fullName>FormAssembly_forms</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Single_form_language__c</columns>
    <columns>FormAssembly_base_URL__c</columns>
    <columns>Form_Phrase_Title__c</columns>
    <columns>Under_construction__c</columns>
    <columns>Sort_number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FormAssembly_base_URL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>FormAssembly forms</label>
</ListView>