force-app/main/default/objects/Form__c/listViews/ReportingForms.listView-meta.xml
<ListView>
    <fullName>ReportingForms</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Sort_number__c</columns>
    <columns>Form_Phrase_Title__c</columns>
    <columns>Form_Phrase_sub_title__c</columns>
    <columns>Form_Phrase_Intro__c</columns>
    <columns>Form_languages_unavailable__c</columns>
    <columns>Under_construction__c</columns>
    <columns>Form_Phrase_ack_email_body__c</columns>
    <columns>Ack_template__c</columns>
    <columns>Closing_survey_form__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ReportingQs</value>
    </filters>
    <label>ReportingForms</label>
</ListView>